# feliscatus

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Tomcat.sln  Tomcat.vcxproj  Tomcat.vcxproj.filters  bitboard.h  board.h  define.h  eval.h  game.h  hash.h  magic.h  material.h  move.h  moves.h  perft.h  pgn.h  piece.h  position.h  search.h  see.h  square.h  tomcat.cpp  tomcat.h  uci.h  util.h  worker.h  zobrist.h
cli/: CMakeLists.txt  cli_parser.cpp  cli_parser.hpp
cmake/: Conan.cmake  Doxygen.cmake  Engine.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
engine/: CMakeLists.txt  main.cpp
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
io/: CMakeLists.txt  Feliscatus.json  directory_resolver.cpp  directory_resolver.hpp  file_resolver.cpp  file_resolver.hpp  settings_resolver.cpp  settings_resolver.hpp
scripts/: selfplay_v2
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  bitboard.hpp  board.cpp  board.h  board.hpp  cpu.cpp  cpu.h  cpu.hpp  datapool.cpp  datapool.h  define.h  eval.cpp  eval.h  eval.hpp  feliscatus.cpp  feliscatus.h  game.cpp  game.h  hash.h  hash.hpp  magic.h  main.cpp  material.cpp  material.h  material.hpp  miscellaneous.cpp  miscellaneous.h  miscellaneous.hpp  move.h  move_gen.cpp  moves.cpp  moves.h  moves.hpp  parameters.h  parameters.hpp  pawnhashtable.cpp  pawnhashtable.h  pawnhashtable.hpp  (+58 more)
test/: CMakeLists.txt  bb_tests.cpp  board_tests.cpp  catch_main.cpp  constexpr_tests.cpp  perft_tests.cpp  util_tests.cpp
tuner/: CMakeLists.txt  file_resolver.h  file_resolver.hpp  main.cpp  pgn.cpp  pgn.h  pgn.hpp  pgn_player.cpp  pgn_player.h  pgn_player.hpp  tune.cpp  tune.h  tune.hpp
